--- a/index.html
+++ b/index.html
@@ -10,7 +10,333 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!-- ===Start Developing=== -->
+    <!-- ===Header Area Start=== -->
+    
+    <header>
+        <!-- ===Navigation Area Start=== -->
+        <section>
+                  <!-- ===Navigation Start=== -->
+                  <nav class="navbar navbar-expand-lg bg-light fixed-top">
+                    <div class="container">
+                        <!-- ===Brand Logo=== -->
+                        <div class="brand">
+                            <a class="navbar-brand" href="#">
+                                <img class="" src="icons/Logo.png" alt="">
+                            </a>
+                        </div>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item p-3">
+                              <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item p-3">
+                              <a class="nav-link" href="#">Product</a>
+                            </li>
+                            <li class="nav-item p-3">
+                              <a class="nav-link" href="#">About Us</a>
+                            </li>
+                            <li class="nav-item p-3">
+                              <a class="nav-link" href="#">Contact Us</a>
+                            </li>
+                          </ul>
+                        <div class="icon">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </nav>
+                  <!-- ===Navigation End=== -->
+        </section>
+        <!-- ===Navigation Area End=== -->
+
+        <!-- ===Slider Area Start==== -->
+        <section class="container mt-5 mb-5">
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner pt-5">
+                    <!-- ===First Slide=== -->
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <div class="row d-flex justify-content-center align-items-center">
+                      <div class="col-lg-6 col-md-6 col-sm-12">
+                        <img class="img-fluid slider" src="img/slider/main-slide.png" alt="">
+                    </div>
+                      <div class="col-lg-6 col-md-6 col-sm-12 heading-text">
+                            <h1><span>Nike React</span> 
+                                Infinity Run 2</h1>
+                            <p class="text-justify">Lorem Ipsum is simply dummy text of the printing 
+                                and typesetting industry.Lorem Ipsum is simply dummy text of the printing 
+                                and typesetting industry.</p>
+                            <a href="#" class="btn btn-primary btns">
+                                <i class="fa-solid fa-cart-shopping p-2"></i>Buy Now</a>
+                        </div>
+                    </div>
+                  </div>
+                  <!-- ===Second Slide=== -->
+                  <div class="carousel-item" data-bs-interval="20000">
+                    <div class="row d-flex justify-content-center align-items-center">
+                        <div class="col-lg-6 col-md-6 col-sm-12 heading-text">
+                          <h1><span>Nike React</span> 
+                              Infinity Run 2</h1>
+                          <p class="text-justify">Lorem Ipsum is simply dummy text of the printing 
+                              and typesetting industry.Lorem Ipsum is simply dummy text of the printing 
+                              and typesetting industry.</p>
+                          <a href="#" class="btn btn-primary btns">
+                              <i class="fa-solid fa-cart-shopping p-2"></i>Buy Now</a>
+                      </div>
+                      <div class="col-lg-6 col-md-6 col-sm-12">
+                        <img class="img-fluid slider" src="img/slider/slide1.png" alt="">
+                    </div>
+                    </div>
+                  </div>
+                  <!-- ===Third Slide=== -->
+                  <div class="carousel-item" data-bs-interval="30000">
+                    <div class="row d-flex justify-content-center align-items-center">
+                      <div class="col-lg-6 col-md-6 col-sm-12">
+                        <img class="img-fluid slider" src="img/slider/slide2.png" alt="">
+                    </div>
+                      <div class="col-lg-6 col-md-6 col-sm-12 heading-text">
+                            <h1><span>Nike React</span> 
+                                Infinity Run 2</h1>
+                            <p class="text-justify">Lorem Ipsum is simply dummy text of the printing 
+                                and typesetting industry.Lorem Ipsum is simply dummy text of the printing 
+                                and typesetting industry.</p>
+                            <a href="#" class="btn btn-primary btns">
+                                <i class="fa-solid fa-cart-shopping p-2"></i>Buy Now</a>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+        <!-- ===Slider Area End==== -->
+
+    </header>
+
+    <!-- ===Main Section Start=== -->
+    <main>
+
+      <!-- ===CASUAL SHOES Section Start=== -->
+      <section class="container mt-5 mb-5">
+        <h1 class="section-heading">Casual Shoes</h1>
+        <div class="text-center">
+          <div class="row gx-2">
+            <div class="col-lg-3 col-md-4 col-sm-12">
+              <div class="p-2">
+                <div class="product">
+                  <div class="product-image">
+                    <img class="img-fluid" src="img/casual-shoes/casual-1.png" alt="">
+                  </div>
+                  <div class="product-details p-2">
+                    <h3>Nike Shoe</h3>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                      printing and typesetting industry.</p>
+                  </div>
+                  <div class="price d-flex align-items-center justify-content-between p-2">
+                    <h2>$234</h2>
+                    <a href="#" class="btns">Buy Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-12">
+              <div class="p-2">
+                <div class="product">
+                  <div class="product-image">
+                    <img class="img-fluid" src="img/casual-shoes/casual-2.png" alt="">
+                  </div>
+                  <div class="product-details p-2">
+                    <h3>Nike Shoe</h3>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                      printing and typesetting industry.</p>
+                  </div>
+                  <div class="price d-flex align-items-center justify-content-between p-2">
+                    <h2>$234</h2>
+                    <a href="#" class="btns">Buy Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-12">
+              <div class="p-2">
+                <div class="product">
+                  <div class="product-image">
+                    <img class="img-fluid w-55" src="img/casual-shoes/casual-3.png" alt="">
+                  </div>
+                  <div class="product-details p-2">
+                    <h3>Nike Shoe</h3>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                      printing and typesetting industry.</p>
+                  </div>
+                  <div class="price d-flex align-items-center justify-content-between p-2">
+                    <h2>$234</h2>
+                    <a href="#" class="btns">Buy Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-12">
+              <div class="p-2">
+                <div class="product">
+                  <div class="product-image">
+                    <img class="img-fluid" src="img/casual-shoes/casual-1.png" alt="">
+                  </div>
+                  <div class="product-details p-2">
+                    <h3>Nike Shoe</h3>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                      printing and typesetting industry.</p>
+                  </div>
+                  <div class="price d-flex align-items-center justify-content-between p-2">
+                    <h2>$234</h2>
+                    <a href="#" class="btns">Buy Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ===Casual Shoes Section End=== -->
+
+      <!-- ===Formal shoes Section Start=== -->
+      <section class="container mt-5 mb-5">
+        <h1 class="section-heading">Formal Shoes</h1>
+        <div class="text-center">
+          <div class="row gx-2">
+            <div class="col-lg-3 col-md-4 col-sm-12">
+              <div class="p-2">
+                <div class="product">
+                  <div class="product-image">
+                    <img class="img-fluid" src="img/formal-shoes/formal-2.png" alt="">
+                  </div>
+                  <div class="product-details p-2">
+                    <h3>Nike Shoe</h3>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                      printing and typesetting industry.</p>
+                  </div>
+                  <div class="price d-flex align-items-center justify-content-between p-2">
+                    <h2>$234</h2>
+                    <a href="#" class="btns">Buy Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-12">
+              <div class="p-2">
+                <div class="product">
+                  <div class="product-image">
+                    <img class="img-fluid" src="img//formal-shoes/formal-1.png" alt="">
+                  </div>
+                  <div class="product-details p-2">
+                    <h3>Nike Shoe</h3>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                      printing and typesetting industry.</p>
+                  </div>
+                  <div class="price d-flex align-items-center justify-content-between p-2">
+                    <h2>$234</h2>
+                    <a href="#" class="btns">Buy Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-12">
+              <div class="p-2">
+                <div class="product">
+                  <div class="product-image">
+                    <img class="img-fluid w-55" src="img//formal-shoes/formal-2.png" alt="">
+                  </div>
+                  <div class="product-details p-2">
+                    <h3>Nike Shoe</h3>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                      printing and typesetting industry.</p>
+                  </div>
+                  <div class="price d-flex align-items-center justify-content-between p-2">
+                    <h2>$234</h2>
+                    <a href="#" class="btns">Buy Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-12">
+              <div class="p-2">
+                <div class="product">
+                  <div class="product-image">
+                    <img class="img-fluid" src="img//formal-shoes/formal-1.png" alt="">
+                  </div>
+                  <div class="product-details p-2">
+                    <h3>Nike Shoe</h3>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                      printing and typesetting industry.</p>
+                  </div>
+                  <div class="price d-flex align-items-center justify-content-between p-2">
+                    <h2>$234</h2>
+                    <a href="#" class="btns">Buy Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ===Formal Shoes Section End=== -->
+
+      <!-- ===Rules Area Start=== -->
+      <section class="container mt-5 mb-5">
+        <div class="row mt-5">
+          <div class="col-lg-6 cold-md-6 col-sm-12">
+            <!-- 01 -->
+            <div class="policy-details d-flex align-items-center justify-content-center bg-danger p-2 mb-2">
+              <img class="img-fluid w-25" src="icons/image 12.png" alt="">
+              <div class="side-text ms-2">
+                <h5>Find the Perfect Fit</h5>
+                <p>Everybody is different, which is why we
+                  offer styles for every body.</p>
+              </div>
+            </div>
+            <!-- 02 -->
+            <div class="policy-details d-flex align-items-center justify-content-center bg-danger p-2 mb-2">
+              <img class="img-fluid w-25" src="icons/image 13.png" alt="">
+              <div class="side-text ms-2">
+                <h5>Find the Perfect Fit</h5>
+                <p>Everybody is different, which is why we
+                  offer styles for every body.</p>
+              </div>
+            </div>
+            <!-- 03 -->
+            <div class="policy-details d-flex align-items-center justify-content-center bg-danger p-2 mb-2">
+              <img class="img-fluid w-25" src="icons/image 14.png" alt="">
+              <div class="side-text ms-2">
+                <h5>Find the Perfect Fit</h5>
+                <p>Everybody is different, which is why we
+                  offer styles for every body.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Side Image -->
+          <div class="col-lg-6 cold-md-6 col-sm-12 mt-5">
+            <div class="side-image pt-5">
+              <img class="img-fluid" src="icons/side-image.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ===Rules Area End=== -->
+      
+    </main>
+    <!-- ===Main Section End=== -->
+
+
+    <!-- ===Header Area End=== -->
     <!-- ===Bootstrap JS CDN link=== -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <!-- ===Font Awesome ICON kit Link=== -->
