--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <p class="text-justify">Lorem Ipsum is simply dummy text of the printing 
                                 and typesetting industry.Lorem Ipsum is simply dummy text of the printing 
                                 and typesetting industry.</p>
-                            <a href="#" class="btn btn-primary btns">
+                            <a href="#" class="btn btns">
                                 <i class="fa-solid fa-cart-shopping p-2"></i>Buy Now</a>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                           <p class="text-justify">Lorem Ipsum is simply dummy text of the printing 
                               and typesetting industry.Lorem Ipsum is simply dummy text of the printing 
                               and typesetting industry.</p>
-                          <a href="#" class="btn btn-primary btns">
+                          <a href="#" class="btn btns">
                               <i class="fa-solid fa-cart-shopping p-2"></i>Buy Now</a>
                       </div>
                       <div class="col-lg-6 col-md-6 col-sm-12">
@@ -103,7 +103,7 @@
                             <p class="text-justify">Lorem Ipsum is simply dummy text of the printing 
                                 and typesetting industry.Lorem Ipsum is simply dummy text of the printing 
                                 and typesetting industry.</p>
-                            <a href="#" class="btn btn-primary btns">
+                            <a href="#" class="btn btns">
                                 <i class="fa-solid fa-cart-shopping p-2"></i>Buy Now</a>
                         </div>
                     </div>
@@ -122,13 +122,13 @@
         <!-- ===Slider Area End==== -->
 
     </header>
-
+    <!-- ===Header Area End=== -->
     <!-- ===Main Section Start=== -->
     <main>
 
       <!-- ===CASUAL SHOES Section Start=== -->
       <section class="container mt-5 mb-5">
-        <h1 class="section-heading">Casual Shoes</h1>
+        <h1 class="section-heading pt-5">Casual Shoes</h1>
         <div class="text-center">
           <div class="row gx-2">
             <div class="col-lg-3 col-md-4 col-sm-12">
@@ -210,7 +210,7 @@
 
       <!-- ===Formal shoes Section Start=== -->
       <section class="container mt-5 mb-5">
-        <h1 class="section-heading">Formal Shoes</h1>
+        <h1 class="pt-5">Formal Shoes</h1>
         <div class="text-center">
           <div class="row gx-2">
             <div class="col-lg-3 col-md-4 col-sm-12">
@@ -290,12 +290,22 @@
       </section>
       <!-- ===Formal Shoes Section End=== -->
 
+      <!-- ===Section Title=== -->
+      <section class="container mt-5 mb-5">
+        <div class="row">
+          <div class="col-lg-12 col-mb-12 col-sm-12 ">
+            <div class="d-flex justify-content-center align-content-center">
+              <h1 class="section-heading mt-5">Here's Some Rules</h1>
+            </div> 
+          </div>
+        </div>
+      </section>
       <!-- ===Rules Area Start=== -->
       <section class="container mt-5 mb-5">
         <div class="row mt-5">
-          <div class="col-lg-6 cold-md-6 col-sm-12">
+          <div class="col-lg-6 col-md-6 col-sm-12">
             <!-- 01 -->
-            <div class="policy-details d-flex align-items-center justify-content-center bg-danger p-2 mb-2">
+            <div class="policy-details d-flex align-items-center justify-content-center  p-2 mb-2">
               <img class="img-fluid w-25" src="icons/image 12.png" alt="">
               <div class="side-text ms-2">
                 <h5>Find the Perfect Fit</h5>
@@ -304,7 +314,7 @@
               </div>
             </div>
             <!-- 02 -->
-            <div class="policy-details d-flex align-items-center justify-content-center bg-danger p-2 mb-2">
+            <div class="policy-details d-flex align-items-center justify-content-center  p-2 mb-2">
               <img class="img-fluid w-25" src="icons/image 13.png" alt="">
               <div class="side-text ms-2">
                 <h5>Find the Perfect Fit</h5>
@@ -313,7 +323,7 @@
               </div>
             </div>
             <!-- 03 -->
-            <div class="policy-details d-flex align-items-center justify-content-center bg-danger p-2 mb-2">
+            <div class="policy-details d-flex align-items-center justify-content-center  p-2 mb-2">
               <img class="img-fluid w-25" src="icons/image 14.png" alt="">
               <div class="side-text ms-2">
                 <h5>Find the Perfect Fit</h5>
@@ -323,20 +333,100 @@
             </div>
           </div>
           <!-- Side Image -->
-          <div class="col-lg-6 cold-md-6 col-sm-12 mt-5">
+          <div class="col-lg-6 col-md-6 col-sm-12 mt-5">
             <div class="side-image pt-5">
               <img class="img-fluid" src="icons/side-image.png" alt="">
             </div>
           </div>
         </div>
       </section>
-      <!-- ===Rules Area End=== -->
-      
+
+      <!-- ===Section Title=== -->
+      <section class="container mt-5 mb-5">
+        <div class="row">
+          <div class="col-lg-12 col-mb-12 col-sm-12 ">
+            <div class="d-flex justify-content-center align-content-center">
+              <h1 class="section-heading mt-5">Any Query!</h1>
+            </div> 
+          </div>
+        </div>
+      </section>
+      <!-- ===Query=== -->
+      <section class="container mt-5 mb-5">
+        <div class="row">
+            <div class="email col-lg-12 col-md-12 col-sm-12 d-flex justify-content-center align-content-center">
+              <input type="email" name="" id="" placeholder="Email"><br>
+              <input type="button" name="submit" value="Submit" class="submit">
+            </div>
+        </div>
+      </section>
+      <!-- ===Query=== -->
+      <section class="container w-50 bg-primary  mb-5 rounded">
+        <div class="row d-flex align-items-center p-2">
+          <div class="col-lg-9">
+            <h3 class="text-white">Get Reach Our Support</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quae necessitatibus eligendi non dignissimos expedita.</p>
+          </div>
+          <div class="col-lg-3">
+            <a href="#" class="btns">Buy Now</a>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- ===Main Section End=== -->
 
+    <!-- ===Footer Area Start=== -->
+    <footer class=" bg-black pt-5 pb-5">
+      <section class="">
+        <div class="container">
+          <div class="row ">
+            <div class="col-lg-4 mt-5">
+              <div class="brand">
+                <a class="navbar-brand" href="#">
+                    <img class="w-100 h-auto" src="icons/Logo.png" alt="">
+                </a>
+                <p class="pt-2 text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut doloribus voluptates atque voluptatum commodi, corrupti illo temporibus itaque non animi?</p>
+                <div class="social-icons d-flex mt-3 text-white gap-2">
+                  <div class="icons p-2">
+                    <i class="fa-brands fa-facebook"></i>
+                  </div>
+                  <div class="icons p-2">
+                    <i class="fa-brands fa-facebook"></i>
+                  </div>
+                  <div class="icons p-2">
+                    <i class="fa-brands fa-facebook"></i>
+                  </div>
+                </div>
+            </div>
+            </div>
+            <div class="col-lg-4 mt-5">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center text-white">
+                <li class="nav-item ">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item ">
+                  <a class="nav-link" href="#">Product</a>
+                </li>
+                <li class="nav-item ">
+                  <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item ">
+                  <a class="nav-link" href="#">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-4 mt-5">
+              <div class="">
+                <h3 class="text-white">Payment We Support</h3>
+                <img class="img-fluid" src="img/payment.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
+    <!-- ===Footer Area End=== -->
 
-    <!-- ===Header Area End=== -->
     <!-- ===Bootstrap JS CDN link=== -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <!-- ===Font Awesome ICON kit Link=== -->
